--- a/bycd.html
+++ b/bycd.html
@@ -11,6 +11,15 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-WV9C8N7J');</script>
     <!-- End Google Tag Manager -->
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WX1GY7GEWF"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-WX1GY7GEWF');
+    </script>
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
