--- a/bycd.html
+++ b/bycd.html
@@ -27,7 +27,7 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    <h1>Bu bir test sayfasıdır.</h1>
+    <h1>by©D Bu bir test sayfasıdır.</h1>
     <p>Bu sayfa Google Tag Manager ile izlenmektedir.</p>
 </body>
 </html>
