--- a/bycd.html
+++ b/bycd.html
@@ -65,7 +65,7 @@
     <div class="button-container">
         <button class="button" onclick="startProcess('Birinci İşlem')">Birinci İşlem</button>
         <button class="button" onclick="startProcess('İkinci İşlem')">İkinci İşlem</button>
-        <button class="button" onclick="startProcess('Üçüncü İşlem')">Üçüncü İşlem</button>
+        <button class="button" onclick="startProcess('Üçüncü İşlem')">3 Üçüncü İşlem</button>
         <button class="button" onclick="startProcess('Dördüncü İşlem')">Dördüncü İşlem</button>
     </div>
 
